--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -44,7 +44,7 @@ body {
 .sideMenu {
     display: flex;
     justify-content: space-between;
-    padding-top:0px;
+    padding-top: 5%;
 }
 .login-form {
     background-color: #ffffff;
@@ -70,46 +70,17 @@ body {
 }
 .passwordTitle {
     font-size: 18px;
-    margin: -5px 62px;
-    margin-top: 10px;
-    margin-bottom: -13px;
 }
-.login-formInput::placeholder {
+.login_formInput::placeholder {
     color: #999696;
 }
-.login-formInput {
+.login_formInput {
     border: 1px solid #b9b3b3;
     font-size: 14px;
     border-radius: 10px;
     margin: 8px 0;
     width: 261px;
     padding: 7px 15px;
-}
-.schoolIdTitle {
-    font-size: 18px;
-    margin: -10px 62px;
-    margin-bottom: -3px;
-}
-.login-formSchoolId {
-    border: 1px solid #b9b3b3;
-    font-size: 21px;
-    border-radius: 10px;
-    margin: 10px 65px;
-    padding: 2px;
-}
-.login-formButton {
-    font-size: 20px;
-    color: #fff;
-    background-color: #1877f2;
-    display: flex;
-    border-radius: 500px;
-    box-shadow: 3px 3px 10px rgba(39,51,145, .3);
-    justify-content: center;
-    align-items: center;
-    width: 250px;
-    transition: 0.5s;
-    margin: 20px 0px 10px 0px;
-    cursor: pointer;
 }
 .login-form_false_Button {
     font-size: 20px;
@@ -125,19 +96,37 @@ body {
     margin: 20px 0 10px 0px;
     cursor: pointer;
 }
-.login-formButton:hover {
-    opacity: 0.6;
-}
 .login-form_false_Button:hover {
     opacity: 0.6;
 }
-.login-form-subText {
+.sub_text {
     font-size: 12px;
     color: #009fff;
 }
-.login-form-subText:hover {
+.sub_text:hover {
     opacity: 0.6;
 }
 .error_message {
     font-size: 15px;
+}
+.createMenu {
+    padding: 0 60px;
+}
+.select {
+    border: 1px solid #b9b3b3;
+    font-size: 10px;
+    border-radius: 30px;
+    padding: 7px 5px;
+    margin: 0 10px 0 0;
+    width: 70px;
+    color: #999696;
+}
+.option {
+    color: black;
+}
+.check_text {
+    font-size: 14px;
+}
+.error_message_password_school_id {
+    color: red;
 }
