--- a/assets/css/self-introduction.css
+++ b/assets/css/self-introduction.css
@@ -2,47 +2,52 @@
 .main {
     width: 100%;
     background-color: rgb(187 181 181 / 20%);
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .mainTitle {
     width: 100%;
+}
+.listMenu__button--introduce {
+    opacity: 0.6;
 }
 .mainName__h1 {
     color: #050210cf;
     opacity: 3.0;
     font-family: OCRB;
-    font-size: 38px;
-    padding: 30px 50px;
+    font-size: 30px;
 }
 .mainName__h2 {
     color: #050210cf;
-    opacity: 3.0;
     font-family: OCRB;
     font-size: 20px;
-    padding: 0 50px;
-    margin-top: -30px;
-    margin-bottom: 20px;
 }
 .main__profile {
-    font-size: 18px;
-    padding: 10px 20px;
-    margin-bottom: -20px;
+    font-size: 14px;
 }
 .mainTitle__textrarea {
     border: 1px solid #e0bfbf;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 6px;
-    width: 80%;
+    width: 100%;
     padding: 15px;
     word-break: break-all;
 }
 .mainTitle__textrareaForm {
-    padding: 20px;
-}
-.listMenu__buttonLayout4 {
-    padding: 20px 40px;
+    width: 90%;
+    height: 80%;
+    font-size: 14px;
+    padding: 40px 30px;
+    background-color: #ffff;
+    border: 1px solid #b9b3b3;
+    border-radius: 10px;
+    flex-direction: column;
+    font-family: bold;
 }
 .mainBackButton {
-    font-size: 17px;
+    font-size: 14px;
     position: relative;
 	width: 1.2em;
 	height: 1.2em;
