--- a/assets/css/tweet.css
+++ b/assets/css/tweet.css
@@ -1,12 +1,36 @@
 body {
-    background-color: rgb(187,181,181,20%);
+    background-color: rgb(187 181 181 / 20%);
 }
 aside {
     background-color: white;
 }
 .main {
     width: 100%;
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .edit {
     opacity: 0.6;
+}
+.form {
+    width: 80%;
+    height: 75%;
+    font-size: 14px;
+    padding: 40px 30px;
+    background-color: #ffff;
+    border: 1px solid #b9b3b3;
+    border-radius: 10px;
+    flex-direction: column;
+    font-family: bold;
+}
+.name {
+    font-size: 30px;
+}
+.text {
+    border: 1px solid #b9b3b3;
+    border-radius: 10px;
+    width: 100%;
+    padding: 7px 15px;
 }
