--- a/assets/css/tweet.css
+++ b/assets/css/tweet.css
@@ -6,7 +6,7 @@ aside {
 }
 .main {
     width: 100%;
-    padding-top: 80px;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,14 +16,13 @@ aside {
 }
 .form {
     width: 90%;
-    height: 75%;
+    height: 70%;
     font-size: 14px;
     padding: 20px 30px 40px 30px;
     background-color: #ffff;
     border: 1px solid #b9b3b3;
     border-radius: 10px;
     flex-direction: column;
-    font-family: bold;
 }
 .name {
     font-size: 30px;
@@ -41,8 +40,8 @@ aside {
 .mainName__h1 {
     color: #050210cf;
     opacity: 3.0;
-    font-family: OCRB;
-    font-size: 30px;
+    font-weight: bold;
+    font-size: 20px;
 }
 .mainName__h2 {
     color: #050210cf;
