--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: class community
+Theme Name: class_community
 Author: enomoto
-Description: class community
+Description: class_community
 */
