--- a/assets/css/classPage_class.css
+++ b/assets/css/classPage_class.css
@@ -14,7 +14,7 @@
     margin-left: 40px;
     padding: 10px;
     color: #0c0707;
-    font-family: OCRB;
+    font-family: fantasy;
 }
 .classTitleName2 {
     margin-left: 65px;
@@ -53,7 +53,6 @@
 }
 .listClassMneu__button--classMember {
     font-size: 11px;
-    opacity: 0.6;
 }
 .listClassMenu__button--learningRecords {
     font-size: 11px;
@@ -64,9 +63,6 @@
     font-size: 11px;
     margin-top: 10px;
     font-size: 14px;
-}
-.classMember {
-    opacity: 0.6;
 }
 .class_member {
     width: 100%;
