--- a/assets/css/classpage_class_study.css
+++ b/assets/css/classpage_class_study.css
@@ -1,3 +1,7 @@
+img {
+    max-inline-size: 10%;
+    max-block-size: 10%;
+}
 .main{
     width: 100%;
     background-color: rgb(187 181 181 / 20%);
