--- a/assets/css/tweet.css
+++ b/assets/css/tweet.css
@@ -6,7 +6,7 @@ aside {
 }
 .main {
     width: 100%;
-    padding-top: 20px;
+    padding-top: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,6 +32,19 @@ aside {
     border-radius: 10px;
     width: 100%;
     padding: 7px 15px;
+}
+/* 学習記録 */
+.listMenu__study_time {
+    border: 1px solid #dedede;
+    font-size: 14px;
+    margin: 5px;
+    border-radius: 6px;
+    width: 13%;
+    background-color: #e2cbcb47;
+}
+.listMenu__study_time:hover {
+    opacity: 0.6;
+    color: #999696;
 }
 /* 自己紹介 */
 .mainTitle {
@@ -103,4 +116,13 @@ aside {
 }
 .fa-plus {
     font-size: 15px;
+}
+.select {
+    border: 1px solid #b9b3b3;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 7px 5px;
+    margin: 0 10px 0 0;
+    width: 70px;
+    color: #999696;
 }
