--- a/assets/css/class_study_notUpload.css
+++ b/assets/css/class_study_notUpload.css
@@ -29,11 +29,19 @@
     height: 100%;
     width: 70%;
 }
+.class_member_wrap {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 20px;
+}
 .class_member {
     border: 1px solid #e0bfbf;
     background-color: white;
-    width: 47%;
+    width: 30%;
     border-radius: 10px;
+    margin-right: 20px;
 }
 .class_member_introduce {
     margin-bottom: 10px;
