--- a/assets/css/class_study_notUpload.css
+++ b/assets/css/class_study_notUpload.css
@@ -43,9 +43,18 @@
     border-radius: 10px;
     margin-right: 20px;
 }
+.class_member_date {
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 10px;
+}
 .class_member_introduce {
     margin-bottom: 10px;
     margin-right: 20px;
+}
+.class_details_link {
+    font-size: 12px;
+    color: #009fff;
 }
 .listClassMenu__button--classMember {
     opacity: 1.0;
